--- a/map.html
+++ b/map.html
@@ -134,7 +134,7 @@ html {
 
 <body>
 <div id="mapWrap">
-	<div id="map">
+	<div id="map"></div>
   <div id="addInfoBox">
     <button id="addInfoBtn" class="ui orange button">
       Info
@@ -160,7 +160,7 @@ html {
 			<p class="note">Another mapping project by: <a style="color:#eb5200;" href="https://www.mapto.ca/" target="blank">MapTO</a></p>
       <p style="margin-top:0;" class="note">Thanks to: <a href="https://open.toronto.ca/dataset/web-map-services/" target="blank">Toronto Open Data</a>, <a href="https://github.com/willymaps/history" target="blank">Github</a>, <a href="https://semantic-ui.com/" target="blank">Semantic UI</a>, <a href="https://leafletjs.com/" target="blank">Leaflet</a>, and <a href="http://esri.github.io/esri-leaflet/" target="blank">ESRI</a></p>
 		</div>
-	</div>
+  </div>
 </div>
 
 <script>
