--- a/map.html
+++ b/map.html
@@ -93,7 +93,7 @@ html {
 
   #infoBox h2 {
     margin-top:0;
-    max-width:250px;
+    max-width:220px;
   	color:#333;
   }
 
@@ -149,7 +149,7 @@ html {
       <button id="closeBtn" class="ui icon button">
         <i class="close icon"></i>
       </button>
-			<h2>Historical Maps of Toronto</h2>
+			<h2>Historical Imagery of Toronto</h2>
 			<p>Use the dropdown to explore historical aerial imagery offered through Toronto's Open Data Portal</p>
 			<div id="dropdownWrap">
 				<span style="margin-right:10px;">Year:</span>
